kubernetes-manifests/k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: emailservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: emailservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/dynatrace-demoability/emailservice:9e830c2
          ports:
            - containerPort: 8080
          readinessProbe:
            periodSeconds: 5
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          livenessProbe:
            periodSeconds: 5
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: emailservice
  ports:
    - name: grpc
      port: 5000
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: checkoutservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: checkoutservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      containers:
        - name: server
          image: gcr.io/dynatrace-demoability/checkoutservice:9e830c2
          ports:
            - containerPort: 5050
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: checkoutservice
  ports:
    - name: grpc
      port: 5050
      targetPort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: recommendationservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: recommendationservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      terminationGracePeriodSeconds: 5
      # imagePullsecrets required for perform2019????
      imagePullSecrets:
        - name: demo-registry
      containers:
        - name: server
          image: gcr.io/dynatrace-demoability/recommendationservice:9e830c2
          ports:
            - containerPort: 8080
          readinessProbe:
            periodSeconds: 5
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          livenessProbe:
            periodSeconds: 5
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          resources:
            requests:
              cpu: 100m
              memory: 220Mi
            limits:
              cpu: 200m
              memory: 450Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: recommendationservice
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: frontend
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: frontend
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      containers:
        - name: server
          # both look good
          #image: registry.lab.dynatrace.org/cloudplatform/hipster-shop-frontend
          image: gcr.io/dynatrace-demoability/frontend:9e830c2
          ports:
            - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
                - name: "Cookie"
                  value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
                - name: "Cookie"
                  value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlineboutique-ingress
spec:
  ingressClassName: nginx
  rules:
    - host :  "autoscale.IP_TO_REPLACE.nip.io"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: paymentservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: paymentservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/dynatrace-demoability/paymentservice:9e830c2
          ports:
            - containerPort: 50051
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50051"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50051"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: paymentservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
spec:
  selector:
    matchLabels:
      app: productcatalog
      service: productcatalogservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: productcatalog
        service: productcatalogservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          # image: registry.lab.dynatrace.org/cloudplatform/hipster-shop-productcatalogservice
          image: gcr.io/dynatrace-demoability/productcatalogservice:dd747d8-dirty
          ports:
            - containerPort: 3550
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:3550"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:3550"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 120Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
spec:
  type: ClusterIP
  selector:
    app: productcatalog
    service: productcatalogservice
  ports:
    - name: grpc
      port: 3550
      targetPort: 3550
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: cartservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: cartservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: hrexed/cartservice-nootel:0.1
          ports:
            - containerPort: 7070
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: 300m
              memory: 512Mi
          readinessProbe:
            initialDelaySeconds: 15
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: cartservice
  ports:
    - name: grpc
      port: 7070
      targetPort: 7070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: currencyservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: currencyservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: gcr.io/dynatrace-demoability/currencyservice:9e830c2
          ports:
            - name: grpc
              containerPort: 7000
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:7000"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:7000"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: currencyservice
  ports:
    - name: grpc
      port: 7000
      targetPort: 7000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: shippingservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: shippingservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      containers:
        - name: server
          image: gcr.io/dynatrace-demoability/shippingservice:9e830c2
          ports:
            - containerPort: 50051
          readinessProbe:
            periodSeconds: 5
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50051"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50051"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: shippingservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: redis-cart
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: redis-cart
        product: hipster-shop
      annotations: # here we annotate the deployment to be scraped by dynatrace
        prometheus.io/port: '9121'
        prometheus.io/scrape: 'true'
        litmuschaos.io/chaos: "true"
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          livenessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-data
          resources:
            limits:
              memory: 256Mi
              cpu: 125m
            requests:
              cpu: 70m
              memory: 200Mi
        - name: redis-exporter
          image: 'oliver006/redis_exporter:latest'
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 9121
              protocol: TCP
      volumes:
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: redis-cart
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  selector:
    matchLabels:
      app: hipster-shop
      service: adservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: hipster-shop
        service: adservice
        product: hipster-shop
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: hrexed/adservice-safe:0.1
          ports:
            - containerPort: 9555
          resources:
            requests:
              cpu: 200m
              memory: 180Mi
            limits:
              cpu: 300m
              memory: 300Mi
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 15
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:9555"]
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 15
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:9555"]
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  type: ClusterIP
  selector:
    app: hipster-shop
    service: adservice
  ports:
    - name: grpc
      port: 9555
      targetPort: 9555
